# Streamlit_case

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  script.py
api/: main copy.py  main.py
frontend/: aba1_map.py  aba1_mapa copy.py  aba1_mapa.py  aba2_preco copy.py  aba2_preco.py  aba2_price.py  aba3_distance.py  aba3_distancias.py  aba4_temporal.py  app copy 3.py  app copy 4.py  app copy 5.py  app.py  style_moderno.css  styles.css
frontend/old/: aba3_distancias copy.py  aba4_temporal copy.py  styles.css
